--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-# Core dependencies
+# Core JAX stack
 jax[cuda12]>=0.4.20
 jaxlib>=0.4.20
 optax>=0.1.7
+
+# Scientific computing
 numpy>=1.24.0
 scipy>=1.10.0
-
-# Data and visualization
 h5py>=3.8.0
+
+# Visualization and tracking
 matplotlib>=3.7.0
-
-# Experiment tracking
 wandb>=0.15.0
-
-# Progress bars
 tqdm>=4.65.0
